--- a/app/templates/admin/add_product.html
+++ b/app/templates/admin/add_product.html
@@ -10,11 +10,11 @@
         </div>
         <div class="mb-3">
             {{ form.price.label(class="form-label") }}
-            {{ form.price(class="form-control") }}
+            {{ form.price(class="form-control", type="number", step="0.01", min="0.01") }}
         </div>
         <div class="mb-3">
             {{ form.quantity.label(class="form-label") }}
-            {{ form.quantity(class="form-control") }}
+            {{ form.quantity(class="form-control", type="number", step="1") }}
         </div>
         <div class="mb-3">
             {{ form.description.label(class="form-label") }}
