--- a/app/templates/shared/index.html
+++ b/app/templates/shared/index.html
@@ -24,7 +24,14 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">{{ product.name }}</h5>
-                        <p class="card-text">€{{ product.price }} - {{ product.quantity }} in stock</p>
+                        {% if product.price != product.discounted_price %}
+                        <p class="card-text">
+                            <del>€{{ product.price | round(2) }}</del>
+                            <strong>€{{ product.discounted_price | round(2) }}</strong> - {{ product.quantity }} in stock
+                        </p>
+                        {% else %}
+                        <p class="card-text">€{{ product.price | round(2) }} - {{ product.quantity }} in stock</p>
+                        {% endif %}
                         <a href="{{ url_for('user.add_to_cart', product_id=product.id, quantity=1) }}" class="btn btn-danger btn-lg">Add to cart</a>
                     </div>
                 </div>
