--- a/app/templates/users/change_email.html
+++ b/app/templates/users/change_email.html
@@ -1,15 +1,35 @@
 {% extends "shared/layout.html" %}
 
 {% block content %}
+    <style>
+    .change-email-btn{
+        position: relative;
+        bottom: 2.3em;
+        left: 25em;
+    }
+    .custom-btn {
+
+        background: white;
+        color: black;
+    }
+    .custom-btn:hover {
+        background: rgba(223, 189, 36, 0.87);
+        color: white;
+    }
+
+    </style>
 <div class="row justify-content-center">
     <div class="col-md-6">
         <h2 class="text-center">Change Email</h2>
+        <br>
         <form method="POST" action="{{ url_for('user.change_email') }}">
-            <div class="form-group">
-                <label for="email">New Username</label>
-                <input type="text" class="form-control" id="email" name="email">
+            <div>
+                <span><label for="email">New Email</label></span>
+                <input type="text" id="email" name="email">
             </div>
-            <button type="submit" class="btn btn-primary">Change Email</button>
+            <span class="change-email-btn">
+                <button type="submit" class="btn btn-warning custom-btn">Change Email</button>
+            </span>
         </form>
     </div>
 </div>
