--- a/app/templates/users/change_password.html
+++ b/app/templates/users/change_password.html
@@ -1,5 +1,16 @@
 {% extends "shared/layout.html" %}
 {% block content %}
+    <style>
+       .custom-btn {
+
+        background: white;
+        color: black;
+    }
+    .custom-btn:hover {
+        background: rgba(223, 189, 36, 0.87);
+        color: white;
+    }
+    </style>
 <div class="row justify-content-center">
     <div class="col-md-6">
         <h2 class="text-center">Change Password</h2>
@@ -16,8 +27,9 @@
             <div class="form-group">
                 {{ form.confirm_new_password.label(class="form-label") }}
                 {{ form.confirm_new_password(class="form-control") }}
+
             </div>
-            <button type="submit" class="btn btn-primary btn-lg w-100">Change Password</button>
+            <button type="submit" class="btn btn-warning btn-lg w-100 custom-btn">Change Password</button>
         </form>
     </div>
 </div>
