change=new_use_update

--- a/app/templates/users/change_username.html
+++ b/app/templates/users/change_username.html
@@ -18,7 +18,7 @@
         <div class="col-md-6">
             <form method="POST" action="{{ url_for('user.change_username') }}">
                 <div>
-                    <label for="username">New Username</label>
+                    <label for="username">Change Username</label>
                     <input type="text" id="username" name="username" required>
                 </div>
                 <button type="submit" style="position:relative; bottom: 3.2em; left:25em;" class="btn btn-warning btn-block mt-3 custom-yellow">Change Username</button>
