--- a/app/templates/users/account.html
+++ b/app/templates/users/account.html
@@ -3,16 +3,13 @@
 <div class="row justify-content-center">
     <div class="col-md-6">
 <form method="POST" action="{{ url_for('user.change_username') }}">
-    <button type="submit" style="background: none; border: none;" >Username</button>
+    <button type="submit" style="background: none; border: none;" >Change Username</button>
 </form>
 <form method="POST" action="{{ url_for('user.change_email') }}">
-            <button type="submit" style="background: none; border: none;"> Update Email</button>
+            <button type="submit" style="background: none; border: none;"> Change Email</button>
 </form>
         <form method="GET" action="{{ url_for('user.change_password') }}">
-            <button type="submit" style="background: none; border: none;"> Set New Password</button>
-        </form>
-        <form method="GET" action="{{ url_for('user.order_history') }}">
-            <button type="submit" style="background: none; border: none;"> View Order History</button>
+            <button type="submit" style="background: none; border: none;"> Change Password</button>
         </form>
         {% for message in get_flashed_messages() %}
             <div class="alert alert-danger" role="alert">
