--- a/app/templates/admin/update_user.html
+++ b/app/templates/admin/update_user.html
@@ -1,6 +1,6 @@
 {% extends "shared/layout.html" %}
 {% block content %}
-<div class="container mt-4">
+<div class="container mt-4">   
     <h2>Update User</h2>
     <form id="updateUserForm" method="POST" action="{{ url_for('admin.update_user', user_id=user_id) }}">
         {{ form.hidden_tag() }}
@@ -30,6 +30,7 @@
         </div>
         <div>
             <a class="btn btn-primary" onclick="document.getElementById('updateUserForm').submit();">Update User</a>
+            <a href="{{ url_for('admin.admin_dashboard') }}" class="btn btn-secondary">Back to Admin Panel</a>
         </div>
     </form>
 </div>
