--- a/app/templates/users/cart.html
+++ b/app/templates/users/cart.html
@@ -33,7 +33,7 @@
             {% endfor %}
         </tbody>
     </table>
-    <h3 class="text-right">Total: €{{ total | round(2) }}</h3>
+    <h3 class="text-right">Total: ${{ total | round(2) }}</h3>
     <form action="{{ url_for('user.checkout') }}" method="post">
         {{ form.hidden_tag() }}
         <button class="btn btn-primary" type="submit">Checkout</button>
