--- a/app/templates/users/cart.html
+++ b/app/templates/users/cart.html
@@ -18,7 +18,7 @@
                 <td>{{ item.product.name }}</td> 
                 <td>€{{ item.product.price }}</td>
                 <td>{{ item.quantity }}</td>
-                <td>€{{ (item.product.price * item.quantity)  | round(2) }}</td>
+                <td>€{{ (item.product.price * item.quantity) | round(2) }}</td>
                 <td>
                     <form action="{{ url_for('user.remove_one_from_cart', item_id=item.product_id) }}" method="post" style="display:inline;">
                         {{ form.hidden_tag() }}
@@ -33,7 +33,12 @@
             {% endfor %}
         </tbody>
     </table>
+    {% if current_user.is_eligible_for_discount() %}
+    <h4 class="text-right">Discount: 15%</h4>
+    <h3 class="text-right">Total after Discount: €{{ (total * 0.85) | round(2) }}</h3>
+    {% else %}
     <h3 class="text-right">Total: €{{ total | round(2) }}</h3>
+    {% endif %}
     <form action="{{ url_for('user.checkout') }}" method="post">
         {{ form.hidden_tag() }}
         <button class="btn btn-primary" type="submit">Checkout</button>
