--- a/app/templates/users/balance.html
+++ b/app/templates/users/balance.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="row justify-content-center">
     <div class="col-md-6">
-        <h2 class="text-center">Your balance: €{{ current_user.balance }}</h2>
+        <h2 class="text-center">Your balance: €{{ current_user.balance | round(2) }}</h2>
         <form method="POST" action="{{ url_for('user.balance') }}">
             {{ form.hidden_tag() }}
             <div class="mb-3">
