--- a/app/templates/shared/index.html
+++ b/app/templates/shared/index.html
@@ -22,6 +22,9 @@
         {% for product in products %}
             <div class="col-12 col-sm-6 col-md-4 col-lg-3 product-item">
                 <div class="card">
+                    {% if product.image_path %}
+                    <img src="{{ url_for('static', filename=product.image_path) }}" class="card-img-top" alt="{{ product.name }}">
+                    {% endif %}
                     <div class="card-body">
                         <h5 class="card-title">{{ product.name }}</h5>
                         {% if product.price != product.discounted_price %}
