--- a/app/templates/shared/index.html
+++ b/app/templates/shared/index.html
@@ -24,6 +24,8 @@
                 <div class="card">
                     {% if product.image_path %}
                     <img src="{{ url_for('static', filename=product.image_path) }}" class="card-img-top" alt="{{ product.name }}">
+                    {% else %}
+                    <img src="{{ url_for('static', filename='assets/images/product_images/Placeholder.jpg') }}" class="card-img-top" alt="{{ product.name }}">
                     {% endif %}
                     <div class="card-body">
                         <h5 class="card-title">{{ product.name }}</h5>
