--- a/app/static/style.css
+++ b/app/static/style.css
@@ -1,4 +1,3 @@
-/* General styles */
 body {
     background-color: #f8f9fa;
     color: #212529;
@@ -12,14 +11,14 @@ body {
 
 .navbar-brand {
     font-weight: bold;
-    color: #dc3545 !important; /* Set the text color to red */
-    font-size: 1.4rem; /* 30% smaller than 5rem */
+    color: #dc3545 !important;
+    font-size: 1.4rem;
     transition: color 0.3s, transform 0.3s;
 }
 
 .navbar-brand:hover {
     color: #c82333 !important;
-    transform: scale(1.1); /* Slightly enlarge on hover */
+    transform: scale(1.1); 
 }
 
 .form-control {
@@ -44,13 +43,14 @@ body {
 }
 
 .navbar-nav .nav-item .nav-link:hover {
-    color: #dc3545 !important; /* Change hover color to red */
-    transform: scale(1.1); /* Slightly enlarge on hover */
+    color: #dc3545 !important;
+    transform: scale(1.2);
+    font-weight: bold; 
 }
 
 .no-hover:hover {
-    color: #000 !important; /* Keep the color black on hover */
-    transform: none; /* No transformation on hover */
+    color: #000 !important;
+    transform: none;
 }
 
 .nav-link.text-black {
@@ -59,8 +59,9 @@ body {
 }
 
 .nav-link.text-black:hover {
-    color: #dc3545 !important; /* Change hover color to red */
-    transform: scale(1.1); /* Slightly enlarge on hover */
+    color: #dc3545 !important;
+    transform: scale(1.2);
+    font-weight: bold;
 }
 
 .navbar-toggler {
@@ -90,19 +91,17 @@ h2.text-center {
 }
 
 .bg-red {
-    background-color: #dc3545 !important; /* Set the navbar background to red */
+    background-color: #dc3545 !important;
 }
 
-/* Footer styles */
 footer {
     background-color: #f8f9fa;
     padding: 1rem 0;
     border-top: 1px solid #dee2e6;
     text-align: center;
-    margin-top: auto; /* Push footer to the bottom */
+    margin-top: auto;
 }
 
-/* Additional styles */
 .header-container {
     background-color: #fff;
     padding: 10px 0;
@@ -190,7 +189,8 @@ footer {
 
 .header-nav a:hover {
     background-color: #c82333;
-    transform: scale(1.1);
+    transform: scale(1.2);
+    font-weight: bold;
 }
 
 h1.title {
