--- a/app/templates/users/account_settings.html
+++ b/app/templates/users/account_settings.html
@@ -1,17 +1,13 @@
-<!-- templates/users/index.html --> 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Users</title>
-</head>
-<body>
-    <h1>Users List</h1>
-    <ul>
-        {% for user in arr %}
-            <li>{{ user.username }} - {{ user.email }}</li>
-        {% endfor %}
-    </ul>
-</body>
-</html>
+{% extends "shared/layout.html" %}
+{% block content %}
+<div class="row justify-content-center">
+    <div class="col-md-6">
+        <h2 class="text-center">Account Settings</h2>
+        <ul class="list-group">
+            {% for user in arr %}
+            <li class="list-group-item">{{ user.username }} - {{ user.email }}</li>
+            {% endfor %}
+        </ul>
+    </div>
+</div>
+{% endblock %}
