--- a/app/templates/admin/admin.html
+++ b/app/templates/admin/admin.html
@@ -1,14 +1,16 @@
 {% extends "shared/layout.html" %}
 {% block content %}
-<div class="container mt-4">
-    <h2>Admin Panel</h2>
-    <ul class="list-group">
-        <li class="list-group-item"><a href="{{ url_for('admin.add_product') }}">Add Product</a></li>
-        <li class="list-group-item"><a href="{{ url_for('admin.list_products') }}">Manage Products</a></li>
-        <li class="list-group-item"><a href="{{ url_for('admin.set_discount') }}">Set Discount</a></li>
-        <li class="list-group-item"><a href="{{ url_for('admin.list_discounts') }}">Manage Discounts</a></li>
-        <li class="list-group-item"><a href="{{ url_for('admin.create_user') }}">Create User</a></li>
-        <li class="list-group-item"><a href="{{ url_for('admin.list_users') }}">Show All Users</a></li>
-    </ul>
+<div class="row justify-content-center">
+    <div class="col-md-6">
+        <h2 class="text-center">Admin Panel</h2>
+        <ul class="list-group">
+            <li class="list-group-item"><a href="{{ url_for('admin.add_product') }}">Add Product</a></li>
+            <li class="list-group-item"><a href="{{ url_for('admin.list_products') }}">Manage Products</a></li>
+            <li class="list-group-item"><a href="{{ url_for('admin.set_discount') }}">Set Discount</a></li>
+            <li class="list-group-item"><a href="{{ url_for('admin.list_discounts') }}">Manage Discounts</a></li>
+            <li class="list-group-item"><a href="{{ url_for('admin.create_user') }}">Create User</a></li>
+            <li class="list-group-item"><a href="{{ url_for('admin.list_users') }}">Show All Users</a></li>
+        </ul>
+    </div>
 </div>
 {% endblock %}
