--- a/app/templates/users/orders_history.html
+++ b/app/templates/users/orders_history.html
@@ -1,30 +1,22 @@
 {% extends "shared/layout.html" %}
 {% block content %}
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Order History</title>
-</head>
-<body>
-    <h1>Order History</h1>
-    <ul>
-        {% for order in orders %}
-            <li>
+<div class="row justify-content-center">
+    <div class="col-md-8">
+        <h2 class="text-center">Order History</h2>
+        <ul class="list-group">
+            {% for order in orders %}
+            <li class="list-group-item">
                 <strong>Order Date:</strong> {{ order.order_date }}<br>
-                <strong>Total:</strong> ${{ order.total | round(2)}}<br>
+                <strong>Total:</strong> ${{ order.total | round(2) }}<br>
                 <strong>Items:</strong>
                 <ul>
                     {% for item in order.order_items %}
-                        <li>{{ item.product.name }} - {{ item.quantity }} x ${{ item.price }}</li>
+                    <li>{{ item.product.name }} - {{ item.quantity }} x ${{ item.price }}</li>
                     {% endfor %}
                 </ul>
             </li>
-        {% endfor %}
-    </ul>
-</body>
-</html>
-
+            {% endfor %}
+        </ul>
+    </div>
+</div>
 {% endblock %}
