html button update

--- a/app/templates/users/account.html
+++ b/app/templates/users/account.html
@@ -22,7 +22,7 @@
                 {{ form.confirm(class="form-control", placeholder="") }}
             </div>
             <div>
-                <button type="submit" class="btn btn-success w-100">Update</button>
+                <button type="submit" class="btn btn-danger w-100">Update</button>
             </div>
         </form>
         {% if error %}
