--- a/app/templates/shared/header.html
+++ b/app/templates/shared/header.html
@@ -9,52 +9,55 @@
 </head>
 <body>
     <header class="bg-light py-3 border-bottom">
-        <div class="container d-flex justify-content-between align-items-center">
-            <div>
+        <div class="container">
+            <nav class="navbar navbar-expand-lg navbar-light">
                 <a class="navbar-brand text-danger fw-bold display-4 me-5" href="{{ url_for('index') }}">PARPORA</a>
-            </div>
-            <div class="d-flex align-items-center flex-grow-1">
-                <form class="d-flex me-3 flex-grow-1" action="{{ url_for('user.shop') }}" method="GET" role="search">
-                    <input class="form-control me-2 flex-grow-1" type="search" name="search" placeholder="Search for products, e.g., milk" aria-label="Search">
-                    <button class="btn btn-outline-danger" type="submit">Search</button>
-                </form>                
-                <ul class="navbar-nav d-flex flex-row">
-                    {% if current_user.is_authenticated %}
-                        <li class="nav-item ms-3">
-                            <span class="nav-link text-black">Hello, {{ current_user.username }}!</span>
-                        </li>
-                        <li class="nav-item ms-3">
-                            <a class="nav-link text-dark" href="{{ url_for('user.balance') }}">Balance: €{{ current_user.balance | round(2)}}</a>
-                        </li>
-                        {% if not current_user.is_admin %}
-                            <li class="nav-item ms-3">
-                                <a class="nav-link text-dark" href="{{ url_for('user.order_history') }}">Orders history</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <form class="d-flex me-3 flex-grow-1" action="{{ url_for('user.shop') }}" method="GET" role="search">
+                        <input class="form-control me-2 flex-grow-1" type="search" name="search" placeholder="Search for products, e.g., milk" aria-label="Search">
+                        <button class="btn btn-outline-danger" type="submit">Search</button>
+                    </form>
+                    <ul class="navbar-nav ms-auto">
+                        {% if current_user.is_authenticated %}
+                            <li class="nav-item">
+                                <span class="nav-link text-black">Hello, {{ current_user.username }}!</span>
                             </li>
-                            <li class="nav-item ms-3">
-                                <a class="nav-link text-dark" href="{{ url_for('user.cart') }}">Cart</a>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" href="{{ url_for('user.balance') }}">Balance: €{{ current_user.balance | round(2)}}</a>
+                            </li>
+                            {% if not current_user.is_admin %}
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" href="{{ url_for('user.order_history') }}">Orders history</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" href="{{ url_for('user.cart') }}">Cart</a>
+                                </li>
+                            {% endif %}
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" href="{{ url_for('user.account') }}">Account</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-black" href="{{ url_for('auth.logout') }}">Logout</a>
+                            </li>
+                            {% if current_user.is_admin %}
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" href="{{ url_for('admin.admin_dashboard') }}">Admin Panel</a>
+                                </li>
+                            {% endif %}
+                        {% else %}
+                            <li class="nav-item">
+                                <a class="nav-link text-black" href="{{ url_for('auth.login') }}">Login</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-black" href="{{ url_for('auth.register') }}">Register</a>
                             </li>
                         {% endif %}
-                        <li class="nav-item ms-3">
-                            <a class="nav-link text-dark" href="{{ url_for('user.account') }}">Account</a>
-                        </li>
-                        <li class="nav-item ms-3">
-                            <a class="nav-link text-black" href="{{ url_for('auth.logout') }}">Logout</a>
-                        </li>
-                        {% if current_user.is_admin %}
-                            <li class="nav-item ms-3">
-                                <a class="nav-link text-dark" href="{{ url_for('admin.admin_dashboard') }}">Admin Panel</a>
-                            </li>
-                        {% endif %}
-                    {% else %}
-                        <li class="nav-item ms-3">
-                            <a class="nav-link text-black me-2" href="{{ url_for('auth.login') }}">Login</a>
-                        </li>
-                        <li class="nav-item ms-3">
-                            <a class="nav-link text-black" href="{{ url_for('auth.register') }}">Register</a>
-                        </li>
-                    {% endif %}
-                </ul>
-            </div>
+                    </ul>
+                </div>
+            </nav>
         </div>
     </header>
 
