--- a/app/static/style.css
+++ b/app/static/style.css
@@ -65,11 +65,11 @@ body {
 }
 
 .navbar-toggler {
-    border-color: #ffffff;
+    border-color: #dc3545 !important; /* Make the button border red */
 }
 
 .navbar-toggler-icon {
-    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 255, 255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(220, 53, 69, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E") !important; /* Make the icon lines red */
 }
 
 h2.text-center {
@@ -235,4 +235,16 @@ h1.title {
 .btn-danger:hover {
     background-color: #c82333;
     border-color: #bd2130;
+}
+
+.navbar-collapse {
+}
+
+.navbar-nav .nav-item .nav-link {
+    color: #000 !important;
+    padding: 10px 15px;
+}
+
+.navbar-nav .nav-item .nav-link:hover {
+    color: #dc3545 !important;
 }
